--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "testcafe-blink-diff",
   "version": "0.4.6",
-  "description": "Visual regression for Testcafé through BlinkDiff",
+  "description": "Visual regression for TestCafe through BlinkDiff",
   "main": "lib/index.js",
   "types": "./typings/index.d.ts",
   "bin": {
@@ -14,12 +14,9 @@
     "dist"
   ],
   "scripts": {
-    "dist": "mkdir -p dist && npm run build",
-    "build": "bili --format umd-min --module-name reporter --minimal --file-name reporter.umd.js",
-    "serve": "sirv e2e/public --port 3000",
-    "prepublish": "npm run dist",
-    "test": "npm run test:e2e -- -a 'npm run serve' e2e/cases",
-    "test:e2e": "BASE_URL=http://localhost:3000 testcafe ${BROWSER:-chrome:headless} --screenshots-full-page --take-snapshot -s e2e/screens"
+    "lint": "eslint --fix bin lib src",
+    "build": "rollup -c",
+    "prepublishOnly": "rollup -c"
   },
   "author": "Alvaro Cabrera <pateketrueke@gmail.com>",
   "license": "MIT",
@@ -27,17 +24,18 @@
     "blink-diff": "^1.0.13",
     "glob": "^7.1.6",
     "open": "^7.3.0",
+    "somedom": "^0.1.9",
     "wargs": "^0.9.2"
   },
   "devDependencies": {
-    "bili": "^5.0.5",
+    "@rollup/plugin-commonjs": "^15.1.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
     "eslint": "^7.11.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.1",
-    "minimist": ">=1.2.5",
-    "serialize-javascript": ">=5.0.1",
-    "sirv-cli": "^1.0.8",
-    "somedom": "^0.1.9",
+    "rollup": "^2.32.1",
+    "rollup-plugin-cleaner": "^1.0.0",
+    "rollup-plugin-terser": "^7.0.2",
     "testcafe": "^1.9.4"
   },
   "peerDependencies": {
